# template-balderhub

./: README.md  cookiecutter.json
{{cookiecutter.project_full_slug}}/: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
{{cookiecutter.project_full_slug}}/docs/source/: conf.py  features.rst  index.rst  installation.rst  scenarios.rst  topic_intro.rst  utilities.rst
