[metadata]
name = {{cookiecutter.project_full_slug}}
description = {{cookiecutter.project_full_slug}}: {{ cookiecutter.project_decr_short }}
author = {{cookiecutter.author}}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.url_documentation}}
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source={{cookiecutter.url_source}}
    Tracker={{cookiecutter.url_issues}}

[options]
packages =
    balderhub.{{cookiecutter.project_slug}}
    balderhub.{{cookiecutter.project_slug}}.lib
    balderhub.{{cookiecutter.project_slug}}.lib.scenario_features
    balderhub.{{cookiecutter.project_slug}}.lib.setup_features
    balderhub.{{cookiecutter.project_slug}}.lib.utils
    balderhub.{{cookiecutter.project_slug}}.scenarios
    balderhub.{{cookiecutter.project_slug}}.setups

install_requires =
    baldertest
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
